# waynote

./: Cargo.toml  LICENSE  README.md
docs/notes/: repaint-contract.md
docs/specs/: 2026-06-24-waynote-design.md
packaging/: waynote.desktop  waynote.service
packaging/aur/waynote/: .SRCINFO  PKGBUILD
packaging/aur/waynote-bin/: .SRCINFO  PKGBUILD
scripts/: smoke.sh
src/: main.rs
src/app/: actions.rs  arrange.rs  controller.rs  edit_session.rs  mod.rs  monitor_resolve.rs  note_entry.rs  presenter.rs  reconcile_apply.rs  tray.rs
src/core/: content_hash.rs  frontmatter.rs  id_policy.rs  image_paste.rs  markdown.rs  mod.rs  note.rs  reconcile.rs  theme.rs
src/platform/: autostart.rs  clipboard_image.rs  config.rs  doctor.rs  geometry.rs  input_region.rs  layout.rs  mod.rs  monitors.rs  paths.rs  render.rs  repaint.rs  runtime_prefs.rs  store.rs  surfaces.rs  user_assets.rs  watcher.rs
